tests/golden/errors/field_order.kso
type user
  name: string
  admin: bool

fn main
  print "x"
