tests/golden/errors/field_order.stderr
error[formatting]: fields appear in alphabetical order: `admin` before `name`
  --> field_order.kso:3:3
   3 |   admin:bool
         ^
